Maybe fix blurry row text in recycle scroller

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1617,3 +1617,7 @@ input[type='number']::-webkit-outer-spin-button {
         transform: rotateZ(3deg) !important;
     }
 }
+
+.vue-recycle-scroller.ready .vue-recycle-scroller__item-view {
+    will-change: auto !important;
+}
